bridge/base/0-diariomercantil-namespace.yaml
#! 0-diariomercantil-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: diariomercantil
    labels:
        com.docker.compose.project: diariomercantil
