bridge/base/frontend-deployment.yaml
#! frontend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
    namespace: diariomercantil
    labels:
        com.docker.compose.project: diariomercantil
        com.docker.compose.service: frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: diariomercantil
            com.docker.compose.service: frontend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: diariomercantil
                com.docker.compose.service: frontend
                com.docker.compose.network.app-network: "true"
        spec:
            restartPolicy: Always
            containers:
                - name: dashboard-frontend
                  image: diariomercantil-frontend
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: frontend-80
                      containerPort: 80
                    - name: frontend-5173
                      containerPort: 5173
