bridge/base/frontend-service.yaml
# check if there is at least one published port

#! frontend-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: frontend-published
    namespace: diariomercantil
    labels:
        com.docker.compose.project: diariomercantil
        com.docker.compose.service: frontend
spec:
    selector:
        com.docker.compose.project: diariomercantil
        com.docker.compose.service: frontend
    ports:
        - name: frontend-8080
          port: 8080
          protocol: TCP
          targetPort: frontend-80
